# eventbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/preferences/: example_alice.yaml  example_household.yaml
eventbot/: agent.py  email.py  main.py  models.py  prefs.py  scheduler.py  settings.py
eventbot/templates/: base.html  email_household.html  email_personal.html  household_home.html  index.html  manifest.json  user_history.html  user_home.html  user_prefs.html
tests/: test_agent.py  test_models.py  test_prefs.py
