[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eventbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=4.0.0a5",
    "anthropic>=0.40.0",
    "tavily-python>=0.5.0",
    "aiosmtplib>=3.0.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
